# longrange

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml
Design/: btk-assessment-and-path-forward.md  build-plan.md  catalog-data-research-prompts.md  catalog-seed.json  catalog-starting-values.md  feature-catalog.md
Design/Plans/: test-range-environment-plan.md
Design/archive/: README.md  build-plan-prompt.md  game-design.md  increment-2.1-plan.md  increment-2.2-plan.md  increment-2.3-plan.md  increment-2.4-plan.md  increment-2.md  increments-3-6.md  phase-2-plan.md
Design/bullet-catalog/: catalog-data-research-prompts.md
Design/execution/: PROGRESS.md  execution-protocol.md  increment-0.md  increment-1.5-plan.md  increment-1.6-plan.md  increment-1.7-plan.md  increment-1.8-plan.md  increment-1.md  increment-2.2-plan.md  increment-2.md  increments-3-6.md
GameBuild/: wind_elev_probe2_tmp.mjs  wind_elev_probe_tmp.mjs  wind_yaw_probe_tmp.mjs
GameBuild/app/: index.html  package-lock.json  package.json  vite.config.ts
GameBuild/app/public/textures/: README.md
GameBuild/app/scripts/: check-engine.mjs  check-lockfile.mjs  gen-icons.py
GameBuild/app/src/: App.tsx  main.tsx  smoke.test.ts
GameBuild/app/src/audio/: audio-manager.ts  audio-model.test.ts  audio-model.ts
GameBuild/app/src/debug/: DevTools.tsx  DropTable.tsx  PersistencePanel.tsx  TruthInspector.tsx
GameBuild/app/src/engine-bridge/: engine-bridge.test.ts  engine.d.ts  gear-solve.test.ts  gear-solve.ts  index.ts  match-sim.test.ts  match-sim.ts  steel-target.test.ts  steel-target.ts  types.ts  wasm-module.ts  wind-field.test.ts  wind-field.ts
GameBuild/app/src/game/: acquire.test.ts  acquire.ts  active-gear.test.ts  active-gear.ts  catalog.data.json  catalog.test.ts  catalog.ts  dope-row.test.ts  dope-row.ts  firing-solution.test.ts  firing-solution.ts  hidden-truth.guard.test.ts  hidden-truth.test.ts  hidden-truth.ts  impact-call.test.ts  impact-call.ts  impact-fx-model.test.ts  impact-fx-model.ts  loads.data.json  loads.test.ts  loads.ts  mirage-model.test.ts  mirage-model.ts  shot.test.ts  shot.ts  trace-path.test.ts  trace-path.ts  wind-field-config.ts  wind-marker-model.test.ts  wind-marker-model.ts  wind-superposition.test.ts  wind-superposition.ts  zero-distance.test.ts  zero-distance.ts
GameBuild/app/src/persistence/: export-file.ts  idb-store.ts  index.ts  memory-store.ts  migrations.ts  persistence.test.ts  save-store.ts  schema.ts
GameBuild/app/src/pwa/: UpdateToast.tsx
GameBuild/app/src/range/: RangeScene.ts  RangeView.tsx  SightInScene.ts  TestRangeScene.ts  plate-geometry.test.ts  plate-geometry.ts  plate-surface.test.ts  plate-surface.ts  range-a-config.test.ts  range-a-config.ts  ranges.test.ts  ranges.ts  sight-in-config.test.ts  sight-in-config.ts  sight-in-marks.ts  sight-in-target-texture.ts  steel-scene-api.ts  test-range-config.test.ts  test-range-config.ts  wind-markers-config.test.ts  wind-markers-config.ts
GameBuild/app/src/range/environment/: clouds.ts  environment-config.test.ts  environment-config.ts  ground-cover.ts  index.ts  lighting.ts  mountains.ts  sky.ts  terrain.test.ts  terrain.ts  texture-loader.ts  track.ts  trees.ts
GameBuild/app/src/scope/: BulletTrace.ts  DopePanel.tsx  Mirage.ts  ScopeView.tsx  WindMarkers.ts  dope.test.ts  impact-fx.ts  reticle.test.ts  reticle.ts  scope-projection.test.ts  scope-projection.ts
GameBuild/app/src/shell/: LoadoutOverlay.tsx  RangeSelect.tsx  SettingsScreen.tsx  StoreScreen.tsx
GameBuild/app/src/spike/: AimSpike.tsx
GameBuild/app/src/state/: index.ts  persist-settings.ts  state.test.ts  store.ts
GameBuild/app/src/units/: angle.ts  display.ts  index.ts  length.ts  subtension.ts  units.test.ts  velocity.ts
GameBuild/engine/: CMakeLists.txt  LICENSE.BTK  README.md
GameBuild/engine/include/ballistics/: bullet.h  simulator.h
GameBuild/engine/include/match/: target.h
GameBuild/engine/include/physics/: constants.h  wind_generator.h
GameBuild/engine/include/rendering/: steel_target.h
GameBuild/engine/src/: bindings.cpp
GameBuild/engine/src/ballistics/: simulator.cpp  trajectory.cpp
GameBuild/engine/src/match/: target.cpp
GameBuild/engine/src/physics/: atmosphere.cpp
GameBuild/engine/src/rendering/: steel_target.cpp
GameBuild/engine/tests/: CMakeLists.txt  test_atmosphere.cpp  test_conversions.cpp  test_steel_target_paint.cpp  test_steel_target_settle.cpp  test_zeroing.cpp
GameBuild/validation/: ORACLE_VERSION  loads.json  match-check.mjs  match-sim-check.mjs  run.mjs  solve-driver.mjs
GameBuild/validation/vectors/: golden.json
engine/: CMakeLists.txt  README.md
engine/include/ballistics/: trajectory.h
engine/include/match/: simulator.h
engine/include/math/: vector.h
engine/include/physics/: atmosphere.h
engine/include/rendering/: impact_detector.h  steel_target.h
engine/src/: bindings.cpp
engine/src/match/: simulator.cpp  targets.cpp
engine/src/physics/: wind_generator.cpp
engine/src/rendering/: steel_target.cpp
